[GUI] update